Initial Commit add hide progressbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Submission1-DICODING</string>
+    <string name="app_name">Github Dicoding</string>
     <string name="name">Name</string>
     <string name="username">Username</string>
     <string name="followers">Followers</string>
